syntax = "proto3";

package user;

service UserService {
  rpc CreateUser(UserRequest) returns (UserResponse) {}
  rpc FindUserById(FindUserByIdRequest) returns (UserResponse) {}
  rpc FindUserByEmail(FindUserByEmailRequest) returns (UserResponse) {}
}

message UserRequest {
  string id = 1;
  string user_name = 2;
  string email = 3;
  int32 age = 4;
  string password = 5;
}

message UserResponse {
  string id = 1;
  string user_name = 2;
  string email = 3;
  int32 age = 4;
  string password = 5;
  repeated string subscribers = 6;
}

message FindUserByIdRequest { string id = 1; }

message FindUserByEmailRequest { string email = 1; }